# breaq-reminder

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler-flags.cmake  git.cmake
old-versions/1.0.17.1003/: .directory  QBreakReminder.pro  dialogeditnotes.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
resources/: res.qrc  res.win.rc
src/: QBreakReminder.pro  dialog-editnotes.cpp  dialog-editnotes.h  dialog-editnotes.ui  dialogeditnotes.cpp  dialogeditnotes.h  dialogeditnotes.ui  global_variables.cpp  global_variables.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
